[Lotto] LottoTicket 빌더 패턴 적용